torch-compiler/src/test/resources/negative/EntityWithoutEntityAnnotation.java
package negative;

import org.brightify.torch.annotation.Id;

public class EntityWithoutEntityAnnotation{
    @Id
    Long id;
    
}